fixes gap between buttons

--- a/frontpage/styles.css
+++ b/frontpage/styles.css
@@ -19,22 +19,9 @@ body {
 
 #buttons {
     filter: drop-shadow(0 0.45rem 0.4rem var(--shadow-color));
-}
-
-#repo-link {
     display: flex;
-    gap: 0.4rem;
-    margin-top: 2rem;
-    transition: color 300ms;
-}
-
-#repo-link:hover {
-    color: var(--contrast-color)
-}
-
-#repo-link > img {
-    margin-top: -0.3rem;
-    width: 1.5rem;
+    flex-direction: column;
+    gap: 1.3rem;
 }
 
 .button, a {
@@ -55,7 +42,6 @@ body {
     min-width: 14rem;
     max-width: max-content;
     height: 3rem;
-    margin: 0.7rem;
     display: flex;
 }
 
@@ -117,4 +103,20 @@ body {
     width: 1rem;
     height: 1rem;
     margin-right: 0.6rem;
+}
+
+#repo-link {
+    display: flex;
+    gap: 0.4rem;
+    margin-top: 2rem;
+    transition: color 300ms;
+}
+
+#repo-link:hover {
+    color: var(--contrast-color)
+}
+
+#repo-link > img {
+    margin-top: -0.3rem;
+    width: 1.5rem;
 }
